# tip-token-bot

./: .replit  fly.toml  main.py  pyproject.toml
attached_assets/: Pasted-I-m-building-a-Telegram-tipping-bot-from-scratch-for-a-Polygon-based-memecoin-called-TIP-Token-This-1748208697990.txt
bot/: app.py  config.py
bot/handlers/: balance.py  help.py  referral.py  register.py  start.py  tip.py  transactions.py  wallet.py
bot/keyboards/: inline.py  reply.py
bot/locales/: cn.json  en.json  es.json  ru.json
bot/middlewares/: localization.py  throttling.py
bot/services/: blockchain.py  cache.py  database.py
bot/utils/: i18n.py  idempotency.py
